<resources>
    <string name="app_name">mINVENTORY</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--adding strings for customer form -->
    <string name="firstname_label">First Name</string>
    <string name="lastname_label">Last Name</string>
    <string name="companyname_label">Company Name</string>
    <string name="mobile_label">Mobile</string>
    <string name="email_label">E-mail</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="address_info">ADDRESS</string>
    <string name="details_label">DETAILS</string>
    <string name="save_label">SAVE</string>
    <string name="customer_label">CUSTOMERS</string>
    <string name="vendor_label">VENDORS</string>
    <string name="order_list">ORDER LIST</string>
    <string name="product_list">PRODUCTS LIST</string>
    <string name="address1_label">Address Line 1</string>
    <string name="address2_label">Address Line 2</string>
    <string name="city_label">City</string>
    <string name="state_label">State</string>
    <string name="pincode_label">Pincode</string>
    <string name="contact_label">Contact Number</string>
    <string name="save">SAVE</string>
    <string name="title_activity_add_edit_product">Add/Edit Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="product_description">Product Description</string>
    <string name="quantity">Quantity</string>
    <string name="minimum_quantity">Minimum Quantity</string>
    <string name="dimension">Dimension</string>
    <string name="save_product_description">Save Product</string>
    <string name="gallery_description">Add from gallery</string>
    <string name="camera_description">Add from Camera</string>
    <string name="image_descirption">Product Image</string>
    <string name="product_add_toast">Product Information Added Successfully</string>
    <string name="add_toast">Information Added Successfully</string>
    <string name="metirc_unit">Metirc/UNIT</string>
    <string name="import_from_contacts">Import from Contacts</string>
    <string name="order_number">Order Number</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="amount">Amount</string>
    <string name="customer_name">Customer Name</string>
    <string name="delivery_address_line1">Delivery Address Line1</string>
    <string name="delivery_address_line2">Delivery Address Line2</string>
    <string name="add_product">+ Add Product</string>
    <string name="order_status">Order Status :</string>
    <string name="save_order">Save Order</string>
    <string name="order_label">ORDERS</string>
    <string name="product_info">PRODUCTS</string>
    <string name="order_info">ORDER INFO</string>
    <string name="order_number_widget">"\u20B9" %1$s</string>
    <string name="first_transition">transition1</string>
    <string name="second_transition">transition2</string>
    <string name="notification_title">Pending Order</string>
    <string name="notification_content">The pending orders are : %1$s</string>
    <string name="no_customer_toast">No customer found in the database.</string>
    <string name="no_product_toast">No products found in the database.</string>
    <string name="no_order_toast">Order cannot be saved if product or customer is absent</string>
    <string name="quantity_less">Available quantity less than required quantity. Kindly update the inventory!</string>
    <string name="customer_save">Kindly insert the customer information first</string>
    <string name="no_emailid">No email-id found</string>
    <string name="no_email_app">Sorry! we could not find an email app.</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_device_id" translatable="false">add device id here</string>

    <string name="maps_key" translatable="false">AIzaSyDAUfUlqhQVJHBYOmCzRbS6mFCM0zRhiiI</string>
    <string name="maps_url" translatable="false">https://maps.googleapis.com/maps/api/geocode/json?</string>
    <string name="addresss_literal" translatable="false">components=postal_code:%1$s</string>
    <string name="lat_string" translatable="false">lat</string>
    <string name="lon_string" translatable="false">lng</string>
    <string name="southwest_lat" translatable="false">southwestLatitude</string>
    <string name="southwest_lng" translatable="false">southwestLongitude</string>
    <string name="northeast_alt" translatable="false">northeastLatitude</string>
    <string name="northeast_lng" translatable="false">northeastLongitude</string>
    <string name="formatted_add" translatable="false">formatted_address</string>
    <string name="bounds_string" translatable="false">bounds</string>
    <string name="southwest_string" translatable="false">southwest</string>
    <string name="northeast_string" translatable="false">northeast</string>
    <string name="geometry_string" translatable="false">geometry</string>
    <string name="location_string" translatable="false">location</string>
    <string name="na_string" translatable="false">-NA-</string>
    <string name="result_string" translatable="false">results</string>
    <string name="mail_to" translatable="false">mailto:</string>
    <string name="tel" translatable="false">tel:</string>
    <string name="text_ttf" translatable="false">FjallaOne-Regular.ttf</string>

    <string name="inventory_label">INVENTORY</string>
    <string name="customers_label">CUSTOMERS</string>
    <string name="vendors_label">VENDORS</string>
    <string name="orders_label">ORDERS</string>
    <string name="date_format">dd/MMM/yy</string>
    <string name="_1000_00">1000.00</string>
    <string name="_001">001</string>

    <string-array name="status_array">
        <item name="completed">COMPLETED</item>
        <item name="progress">IN-PROGRESS</item>
        <item name="cancelled">CANCELLED</item>
    </string-array>
</resources>
