<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/cordinator_main"
    tools:context="com.udacity.capstone.activity.AddEditProductActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar_main"
            android:id="@+id/toolbar"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_add_edit_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.udacity.capstone.activity.AddEditOrderActivity"
            android:orientation="vertical"
            style="@style/EditTextMain">


            <EditText
                android:id="@+id/txt_orderno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:layout_marginBottom="@dimen/marginSmallTopAndBottom"
                android:hint="@string/order_number"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:visibility="visible"
                style="@style/EditTextMain"
                />

            <EditText
                android:id="@+id/txt_orderdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_marginBottom="@dimen/marginSmallTopAndBottom"
                android:hint="@string/order_date"
                android:imeOptions="actionNext"
                android:maxLines="1"
                style="@style/EditTextMain"
                />

            <EditText
                android:id="@+id/txt_deliverydate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:layout_marginBottom="@dimen/marginSmallTopAndBottom"
                android:hint="@string/delivery_date"
                android:imeOptions="actionNext"
                android:maxLines="1"
                style="@style/EditTextMain"
                />


            <EditText
                android:id="@+id/txt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginSmallTopAndBottom"
                android:hint="@string/amount"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                style="@style/EditTextMain"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/customer_auto_complete"
                android:completionThreshold="1"
                android:layout_marginBottom="@dimen/marginSmallTopAndBottom"
                android:hint="@string/customer_name"
                style="@style/EditTextMain"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/marginSmallLeftAndRight"
                android:background="@color/divider"
                android:id="@+id/horizontaldivider_order"
                android:layout_marginStart="-1dp"
                android:layout_marginEnd="-1dp"
                android:paddingStart="-1dp"
                android:paddingEnd="-1dp"/>

            <EditText
                android:id="@+id/txt_deliveryaddressline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginSmallTopAndBottom"
                android:hint="@string/delivery_address_line1"
                android:maxLines="1"
                android:inputType="textCapSentences"
                android:imeOptions="actionNext"
                style="@style/EditTextMain"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_deliveryaddressline2"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:hint="@string/delivery_address_line2"
                style="@style/EditTextMain"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_city"
                android:hint="@string/city_label"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                style="@style/EditTextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_state"
                android:hint="@string/state_label"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                style="@style/EditTextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_pincode"
                android:hint="@string/pincode_label"
                android:imeOptions="actionNext"
                android:inputType="number"
                style="@style/EditTextMain"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/marginSmallTopAndBottom"
                android:background="@color/divider"
                android:id="@+id/horizontaldivider_address"
                android:layout_marginStart="-1dp"
                android:layout_marginEnd="-1dp"
                android:paddingStart="-1dp"
                android:paddingEnd="-1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product"
                android:clickable="true"
                android:id="@+id/add_product"
                android:layout_marginTop="@dimen/marginLargeTopAndBottom"
                android:textSize="@dimen/textSizeMain"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_info"
                android:visibility="gone"
                android:textSize="@dimen/textSizeMedium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLargeLeftAndRight"
                android:text="@string/order_status"
                android:textSize="@dimen/textSizeMedium"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status_spinner"
                style="@style/EditTextMain"
                />


            <Button
                android:id="@+id/save_order"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonMainHeight"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/marginLargeLeftAndRight"
                android:layout_marginRight="@dimen/marginLargeLeftAndRight"
                android:gravity="center"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:contentDescription="@string/save_order"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

