<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.capstone.fragment.CustomerInfoTabFragment"
    android:orientation="vertical"
    android:id="@+id/main_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/marginSmallTopAndBottom"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/import_contacts"
                android:text="@string/import_from_contacts"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"
                android:clickable="true"
                android:layout_marginBottom="@dimen/marginLargeTopAndBottom"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                android:layout_marginTop="110dp"
                style="@style/DetailViewText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_firstname"
                android:text="@string/firstname_label"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                style="@style/TextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_fname"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_lastname"
                android:text="@string/lastname_label"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                style="@style/TextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_lname"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_mobile"
                android:text="@string/mobile_label"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                style="@style/TextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_mobile"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                android:inputType="phone"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_company"
                android:text="@string/companyname_label"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                style="@style/TextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_company"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_email"
                android:text="@string/email_label"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                style="@style/TextMain"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_email"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                android:inputType="textWebEmailAddress"
                android:imeOptions="actionNone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_customer"
                android:text="@string/save"
                android:layout_marginStart="@dimen/marginLargeLeftAndRight"
                android:layout_marginEnd="@dimen/marginLargeLeftAndRight"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
